# Gym_Management_System

./: .env.example  .env.template  .gitattributes  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  resources.qrc
cmake/: init_json_files.cmake
project code/Core/: AppInitializer.cpp
project code/Data/: bookings.json  classes.json  courts.json  members.json  monthly_reports.json  remembered.json  saved_cards.json  users.json  waitlists.json  workout_logs.json  workouts.json
project code/DataManager/: classdatamanager.cpp  classdatamanager.h  memberdatamanager.cpp  memberdatamanager.h  padeldatamanager.cpp  padeldatamanager.h  userdatamanager.cpp  userdatamanager.h  workoutdatamanager.cpp  workoutdatamanager.h
project code/Language/: LanguageManager.cpp  LanguageSelector.cpp  LanguageSelector.h  languageselectionpage.h
project code/Model/: availableclassesscreen.cpp  availableclassesscreen.h  class.cpp  class.h  member.cpp  member.h  staff.cpp  staff.h  subscription.cpp  subscription.h  user.cpp  user.h
project code/Model/Gym/: class.cpp  class.h  member.cpp  member.h  prioritywaitlist.cpp  prioritywaitlist.h  staff.cpp  staff.h  subscription.cpp  subscription.h
project code/Model/Padel/: Booking.cpp  Booking.h  Court.cpp  Court.h
project code/Model/System/: timeLogic.cpp  timeLogic.h
project code/Payment/: paymentpage.cpp  paymentpage.h
project code/Settings/: developerpage.h  settingspage.cpp  settingspage.h
project code/Start app/: authpage.cpp  developerpage.cpp  homepage.cpp  imageslider.cpp  imageslider.h  languageselectionpage.cpp  mainpage.cpp  onboardingpage.cpp  onboardingpage.h  settingspage.cpp  splashscreen.cpp  splashscreen.h
project code/Subscription/: newusersubscriptionview.cpp  subscriptionpage.cpp  subscriptionpage.h  subscriptionstatuspage.cpp  subscriptionstatuspage.h
project code/Theme/: ThemeManager.cpp  ThemeManager.h
project code/UI/: UIUtils.cpp  UIUtils.h  leftsidebar.cpp  leftsidebar.h
project code/UI/Stylesheets/Gym/: staffHomePageStyle.h
project code/UI/Stylesheets/Padel/: BookingWindowStyle.h
project code/UI/Stylesheets/System/: clockStyle.h  homepageStyle.h  leftsidebarStyle.h  mainpageStyle.h  notificationStyle.h
project code/UI/Widgets/: Clock.cpp  Clock.h  WorkoutProgressPage.cpp  WorkoutProgressPage.h
project code/UI/Widgets/Clock/: Clock.cpp  Clock.h
project code/UI/Widgets/Notifications/: NotificationManager.cpp  NotificationManager.h  Notifications.cpp  Notifications.h
project code/UI/Widgets/Revenue/: revenue.cpp  revenue.h
project code/Util/: AppInitializer.h  LanguageManager.h  TopPanel.cpp  TopPanel.h  UIUtils.cpp
project code/main/: main.cpp  mainwindow.cpp  mainwindow.h
project code/src/auth/: authpage.cpp  authpage.h  imageslider.cpp
project code/src/onboarding/: languageselectionpage.cpp  languageselectionpage.h  onboardingpage.cpp  splashscreen.cpp  splashscreen.h
project code/src/pages/: addcourtpage.cpp  addcourtpage.h  homepage.cpp  homepage.h  mainpage.cpp  mainpage.h  staffhomepage.cpp  staffhomepage.h
project code/src/pages/Gym/: availableclassesscreen.cpp  availableclassesscreen.h  staffhomepage.cpp  staffhomepage.h
project code/src/pages/Padel/: BookingWindow.cpp  BookingWindow.h  addcourtpage.cpp  addcourtpage.h
project code/src/pages/staffpages/: addmember.cpp  addmember.h
project code/staff/: addmemberpage.cpp  addmemberpage.h  retrievepage.cpp  retrievepage.h  searchmemberpage.cpp  searchmemberpage.h
translations/: fitflexpro_de.qm  fitflexpro_de.ts  fitflexpro_en.qm  fitflexpro_en.ts  fitflexpro_fr.qm  fitflexpro_fr.ts
